@@ -1,3 +1,6 @@
+2014-01-27 arnaud.fontaine
+* Likewise a non-ListBox field, call custom edit() if available (eg encapsulated editor). For example, MultiRelationStringField does not return a plain value, but a MultiRelationEditor overriding Base_edit default behavior.
+
 2011-10-25 yusei
 * Fix Base_resetListSetting. It did not work with "Set List Setting" dialog. Now it accepts any parameters.
 
